# mahaloz_lib

./: README.md  setup.cfg
mahaloz_lib/: __init__.py  __main__.py  logger.py  package_installer.py  system.py
mahaloz_lib/system_setup/: __init__.py  consts.py  installer.py  packages.toml  utils.py
mahaloz_lib/system_setup/data/: packages.toml
mahaloz_lib/system_setup/data/configs/bash/: .bash_profile  .bashrc  setup.toml
mahaloz_lib/system_setup/data/configs/desktop_icons/: setup.toml
mahaloz_lib/system_setup/data/configs/gdb/: setup.toml
mahaloz_lib/system_setup/data/configs/ipython/: ipython_config.py  setup.toml
mahaloz_lib/system_setup/data/configs/lldb/: setup.toml
mahaloz_lib/system_setup/data/configs/regolith/: .Xresources  setup.toml
mahaloz_lib/system_setup/data/configs/tmux/: setup.toml
