[metadata]
name = mahaloz_lib
version = attr: mahaloz_lib.__version__
url = https://github.com/mahaloz/mahaloz_lib
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
license = BSD 2 Clause
license_files = LICENSE
description = Installs things
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    tqdm

python_requires = >= 3.6
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    mahaloz_lib = mahaloz_lib.__main__:main

[options.extras_require]
system_setup =
    numpy
    pandas
    matplotlib
    scipy
    sortedcontainers
    ipdb
    remote_pdb

ctf =
    pwntools
    ropper
    pycryptodome
